# extractive-summariser

./: .gitignore  README.md  pyproject.toml
src/: create_features.py  load_truncated_data.py  main.py  preprocessing_pipeline.py  regex_cleanup.py
